--- a/package.json
+++ b/package.json
@@ -17,15 +17,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@shankarmorwal/rn-viewpager": "^1.3.1",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
     "native-base": "3.3.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12"
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-web": "~0.13.12",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
