--- a/package.json
+++ b/package.json
@@ -17,27 +17,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@shankarmorwal/rn-viewpager": "^1.3.1",
-    "expo": "~42.0.0",
-    "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
+    "dotenv": "^16.0.0",
+    "expo": "^45.0.0",
+    "expo-status-bar": "~1.3.0",
+    "firebase": "^8.10.1",
     "native-base": "3.3.7",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.1",
     "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-circular-progress-indicator": "^4.1.1",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "12.1.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
